--- a/overview/architecture-concepts/core-concepts-terminology.mdx
+++ b/overview/architecture-concepts/core-concepts-terminology.mdx
@@ -1,190 +1,205 @@
 ---
-title: "Core Concepts and Terminology"
-description: "Defines fundamental terms (test case, test suite, assertion, fixture, mock, expectation, action, matcher) and maps them to the underlying implementation files for further exploration. Gives concise, non-technical explanations suitable for quick onboarding."
+title: "Core Concepts & Terminology"
+description: "Familiarize yourself with and quickly reference crucial terminology: tests, test cases, test fixtures, assertions, death tests, parameterized tests, mock objects, matchers, and cardinalities. Learn how these concepts shape how tests are written and interpreted in GoogleTest."
 ---
 
-# Core Concepts and Terminology
+# Core Concepts & Terminology
 
-Welcome to the Core Concepts and Terminology page, your quick guide to the fundamental terms that shape how you interact with GoogleTest's powerful testing and mocking frameworks. This page distills complex ideas into accessible explanations, helping you onboard swiftly and start writing effective tests with confidence.
-
----
-
-## Why These Concepts Matter
-
-In GoogleTest, understanding core concepts like *test cases*, *test suites*, *assertions*, *fixtures*, *mocks*, *expectations*, *actions*, and *matchers* is essential. These building blocks define how you structure your tests, specify expected behaviors, and verify the correctness of your C++ code. 
-
-By mastering these terms, you'll be able to: 
-
-- Write clear, maintainable, and robust unit tests.
-- Harness GoogleMock to create mocks that validate interactions precisely.
-- Leverage expectations and matchers to express intent in your tests with clarity.
-
+Understanding the foundational terms and concepts in GoogleTest is essential for effectively writing, organizing, and interpreting your tests. This page familiarizes you with the key terminology you will encounter: tests, test cases, test fixtures, assertions, death tests, parameterized tests, mock objects, matchers, and cardinalities. Grasping these concepts will clarify how tests are structured and how GoogleTest works under the hood to verify your code behaves as expected.
 
 ---
 
-## Key Terms Defined
+## Tests and Test Cases
 
-### Test Case
-A **test case** is the smallest executable unit of automated testing — a single function or method designed to verify a specific aspect of your code's behavior.
+At the heart of GoogleTest are *tests*, which are organized collections of code designed to verify a particular aspect of your program.
 
-- **Purpose:** Verifies one particular functionality or behavior.
-- **Example:** Checking that a sorting function correctly sorts an array.
+- **Test Case**: A logical grouping of related tests. It often corresponds to the component or feature under test.
+- **Test**: The smallest unit of testing, designed to verify one behavior or condition.
 
-### Test Suite
-A **test suite** groups related test cases together for logical organization.
+GoogleTest encourages organizing your tests into these assemblies so you can systematically check your codebase by feature or module.
 
-- **Purpose:** Helps manage and run multiple related tests as a cohesive set.
-- **Example:** All tests related to string manipulation collected in one suite.
+### Example
 
-### Assertion
-An **assertion** is a statement that checks whether a condition holds true.
+Imagine you have a `Calculator` class:
 
-- **Purpose:** Determines whether a test case passes or fails.
-- **Example:** `EXPECT_EQ(actual, expected);` checks equality between values.
+```cpp
+TEST(CalculatorTest, AddsNumbers) {
+  Calculator calc;
+  EXPECT_EQ(calc.Add(2, 3), 5);
+}
 
-### Fixture
-A **test fixture** sets up the environment for running tests, providing common objects or conditions needed by multiple test cases.
+TEST(CalculatorTest, SubtractsNumbers) {
+  Calculator calc;
+  EXPECT_EQ(calc.Subtract(5, 3), 2);
+}
+```
 
-- **Purpose:** Avoids code duplication and ensures consistent test contexts.
-- **Example:** Initializing database connections or common variables before tests run.
+Here, `CalculatorTest` is the test case name grouping related tests, with each `TEST` macro defining an individual test.
 
-### Mock
-A **mock** is a simulated object that mimics the behavior of real objects, allowing you to set expectations about method calls including arguments, call count, and order.
+## Test Fixtures
 
-- **Purpose:** Enhances testing by isolating the unit under test and verifying interactions.
-- **Example:** A mock database client ensuring that queries are sent as expected.
+To avoid repeating common setup and cleanup code for multiple tests, GoogleTest provides *test fixtures*.
 
-### Expectation
-An **expectation** states how and when you expect certain methods of a mock object to be called.
+A *test fixture* is a class that inherits from `::testing::Test` and contains:
 
-- **Purpose:** Enforces correctness of interactions, including how many times and in what order.
-- **Example:** Expecting that `mock.Save()` will be called exactly twice.
+- Setup code executed before each test.
+- Common objects and variables used by multiple tests.
+- Cleanup code executed after each test.
 
-### Action
-An **action** defines what a mocked method will do when invoked.
+### Scenario
 
-- **Purpose:** Controls the behavior of mock methods at runtime, such as returning values or triggering side effects.
-- **Example:** Returning a pre-set value when a mock method is called.
+Suppose multiple tests need to verify behaviors of a database connection:
 
-### Matcher
-A **matcher** checks whether function arguments meet specified criteria.
+```cpp
+class DatabaseTest : public ::testing::Test {
+ protected:
+  void SetUp() override {
+    db.Connect();
+  }
+  void TearDown() override {
+    db.Disconnect();
+  }
+  Database db;
+};
 
-- **Purpose:** Enables flexible and precise verification of arguments in expectation statements.
-- **Example:** Using `_` to match any argument or `Ge(5)` to match arguments greater or equal to 5.
+TEST_F(DatabaseTest, QueryReturnsResults) {
+  EXPECT_TRUE(db.Query("SELECT * FROM users"));
+}
+
+TEST_F(DatabaseTest, InsertWorks) {
+  EXPECT_TRUE(db.Insert("INSERT INTO users VALUES ('Alice')"));
+}
+```
+
+Tests use `TEST_F` instead of `TEST` to run in the context of the fixture.
+
+## Assertions
+
+Assertions are the fundamental verification mechanism in tests. They check that specific conditions are true or false, and determine the test outcome.
+
+- Assertions such as `EXPECT_EQ`, `ASSERT_TRUE`, and `EXPECT_NE` verify expressions.
+- `EXPECT_` assertions continue test execution even if they fail, while `ASSERT_` assertions will abort the current test immediately upon failure.
+
+Careful use of assertions helps isolate failures and provide detailed feedback for debugging.
+
+## Death Tests
+
+Sometimes you want to verify that your program behaves correctly under fatal failure conditions (e.g., invalid inputs causing a program crash). GoogleTest supports *death tests* to handle this.
+
+- A death test runs a test in a separate process.
+- It checks that the tested code terminates or crashes (via `CHECK`, `assert`, or exceptions).
+- You specify the expected failure message pattern.
+
+Example:
+
+```cpp
+TEST(SomeFatalTest, FailsOnInvalidInput) {
+  EXPECT_DEATH({ MyFunction(-1); }, "Invalid argument");
+}
+```
+
+These tests ensure your program fails safely and predictably.
+
+## Parameterized Tests
+
+To test the same logic with multiple inputs, GoogleTest offers *parameterized tests*.
+
+- You define a test case that takes parameters.
+- You provide multiple input values.
+- GoogleTest automatically instantiates individual tests for each parameter.
+
+This approach avoids code duplication and ensures comprehensive coverage.
+
+Example:
+
+```cpp
+class IsEvenTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(IsEvenTest, ReturnsTrueForEvenNumbers) {
+  int n = GetParam();
+  EXPECT_TRUE(IsEven(n));
+}
+
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, ::testing::Values(2, 4, 6, 8));
+```
+
+## Mock Objects
+
+When testing a module that depends on other components (e.g., databases, networks), it’s often impractical or slow to use the real dependencies. *Mock objects* simulate these dependencies.
+
+- A mock object implements the same interface as the real object.
+- You program the mock with *expectations* specifying how it should be used.
+- The mock verifies if these expectations are met during test execution.
+
+GoogleMock (gMock) is GoogleTest’s integrated framework for creating and managing mocks.
+
+## Matchers
+
+Matchers tell GoogleMock *what arguments* to expect on mock method calls.
+
+- A matcher can specify exact values, ranges, wildcards, or complex predicates.
+- Built-in matchers include `_` (wildcard), `Eq()`, `Ge()` (greater or equal), `HasSubstr()`, and many more.
+- Combined matchers can be built using logical combinators like `AllOf()`, `AnyOf()`, and `Not()`.
+
+Example:
+
+```cpp
+EXPECT_CALL(mock, SetValue(Ge(0)));  // Expect SetValue called with an argument >= 0
+```
+
+## Cardinalities
+
+Cardinalities define *how many times* a mock method is expected to be called.
+
+You can specify them with `Times()` as part of an `EXPECT_CALL()`.
+
+Common cardinalities:
+
+- `Times(0)`: The method should never be called.
+- `Times(1)`: Called exactly once.
+- `AtLeast(n)`: Called at least *n* times.
+- `AtMost(n)`: Called at most *n* times.
+- `Between(m, n)`: Called between *m* and *n* times inclusive.
+- `AnyNumber()`: Called any number of times.
+
+Using correct cardinalities ensures your tests neither over- nor under-specify behavior, making them resilient and accurate.
 
 ---
 
-## How These Concepts Relate
+## How These Concepts Work Together
 
-Understanding the interplay of these concepts is at the heart of effective testing with GoogleTest.
+Imagine a team developing a complex module. They'll write *test cases* grouping related tests that each perform clear assertions about the code’s behavior. When components depend on external resources or other modules, they'll replace them with *mock objects* created using gMock, which are programmed with *expectations* involving specific *matchers* and *cardinalities*. Some tests require validating behavior on invalid input, handled by *death tests*. For shared setup or teardown, *test fixtures* keep their code DRY and maintainable. For repetitive tests with varying inputs, *parameterized tests* ensure completeness.
 
-- You write **test cases** grouped into **test suites**.
-- **Fixtures** prepare the environment needed by these tests.
-- Within tests, **assertions** verify outcomes.
-- For components that collaborate, you create **mocks**.
-- You set **expectations** on mocks to define how they should be used.
-- **Matchers** specify argument patterns expected in mock interactions.
-- **Actions** tell mocks what to do when called, enabling simulation of complex behaviors.
-
-This flow turns your raw test code into a precise, maintainable specification of your system's expected behavior.
+These core concepts form the backbone of GoogleTest’s power and flexibility.
 
 ---
 
-## Implementation Files and Further Exploration
+## Summary Table of Key Terminology
 
-For those ready to dive deeper into GoogleTest's inner workings, the foundational concepts are further explored through the implementation files:
-
-- **Test Cases, Suites, and Fixtures:** Core test structure and execution logic.
-- **Assertions:** Mechanisms for result verification.
-- **Mocking Core:** Located mainly in `gmock-spec-builders.h` and `gmock-spec-builders.cc`, where `ON_CALL` and `EXPECT_CALL` syntax, expectations, and actions are implemented.
-- **Matchers and Actions:** Explore how argument checking and mock method behaviors are realized.
-
-You can find these files and more in the GoogleTest GitHub repository:
-
-[GoogleTest Repository](https://github.com/google/googletest/tree/main/googlemock/include/gmock)
-
----
-
-## Practical Tips
-
-- Start with clear test case definitions and use fixtures for repeated setups.
-- Use mocks to isolate units and verify interaction precisely.
-- Set expectations realistically—too strict expectations can cause brittle tests.
-- Prefer matchers over exact argument values to make tests robust and readable.
-- Use actions to simulate complex return values or side effects.
-- Consult the **gMock for Dummies**, **gMock Cheat Sheet**, and **gMock Cookbook** for hands-on examples and recipes.
-
----
-
-## Common Pitfalls
-
-- Setting expectations *after* mock method invocation causes undefined behavior.
-- Over-specifying matchers can make tests brittle and hard to maintain.
-- Forgetting to provide a virtual destructor in interfaces you mock leads to subtle bugs.
-- Using mocks for non-virtual methods requires specific techniques; otherwise, mocking won't work.
+| Term             | Description                                                                                     |
+|------------------|------------------------------------------------------------------------------------------------|
+| **Test case**    | A collection of related tests, typically for a module or class.                                |
+| **Test**         | A single test, verifying a specific behavior or outcome.                                       |
+| **Test fixture** | A class to set up common objects and state shared by multiple tests.                           |
+| **Assertion**    | A statement in a test that checks if a condition is true or false (e.g., `EXPECT_EQ`).        |
+| **Death test**   | A test that verifies the program’s behavior upon fatal errors/crashes.                         |
+| **Parameterized test** | A test that runs multiple times with different input values.                                |
+| **Mock object**  | A simulated dependency that verifies expected interactions with the code under test.          |
+| **Matcher**      | A predicate or pattern specifying expected arguments in mock calls.                           |
+| **Cardinality**  | Defines the expected number of times a mock method should be called (e.g., `Times(3)`).       |
 
 ---
 
 ## Next Steps
 
-- Proceed to [System Architecture](../architecture-concepts/system-architecture) to understand component interactions.
-- Explore [Feature Overview](../getting-started-intro/feature-overview) to grasp what GoogleTest offers.
-- Read [gMock for Dummies](../../docs/gmock_for_dummies.md) to see concrete examples.
+With these concepts understood, you’re ready to dive deeper:
+
+- Explore [Writing and Running Your First Test](/guides/getting-started/writing-your-first-test) to start coding tests.
+- Learn [Mock Objects and Methods](/api-reference/mocking-actions-matchers/mock-objects-and-methods) to build mocks effectively.
+- Understand [Matchers & Actions for Mocks](/api-reference/mocking-actions-matchers/matchers-actions) to utilize matchers and actions fully.
+
+For a guided introduction, see the [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) tutorial.
 
 ---
 
-<AccordionGroup title="Core Concepts Quick Reference">
-<Accordion title="Test Case & Test Suite">
-Test case: an individual test verifying a specific behavior. Test suite: a collection of related test cases.
-</Accordion>
-<Accordion title="Assertion">
-Code expressions checking for expected results, e.g., `EXPECT_TRUE()`, `ASSERT_EQ()`.
-</Accordion>
-<Accordion title="Fixture">
-Sets up common test environment used by multiple tests.
-</Accordion>
-<Accordion title="Mock & Expectation">
-Mock objects simulate collaborators; expectations define expected calls on mocks.
-</Accordion>
-<Accordion title="Action & Matcher">
-Actions define mock response; matchers validate function arguments.
-</Accordion>
-</AccordionGroup>
 
-<Tip>
-Explore the [gMock Cheat Sheet](../getting-started-intro/feature-overview) and [gMock Cookbook](../../docs/gmock_cook_book.md) for practical guidelines and examples on how to use these concepts effectively.
-</Tip>
-
----
-
-## Summary
-This page provides an essential glossary of GoogleTest's core testing and mocking concepts, establishing a common language that empowers you to write precise and insightful tests.
-
-Understanding these concepts is your gateway to unlocking GoogleTest's full potential in verifying and validating C++ code robustly and efficiently.
-
-
----
-
-## Helpful Links
-
-- [gMock for Dummies](../../docs/gmock_for_dummies.md) — A beginner-friendly introduction.
-- [Mocking Reference](../reference/mocking.md) — Detailed look at mock APIs.
-- [System Architecture](../architecture-concepts/system-architecture) — How these parts work together.
-- [Feature Overview](../getting-started-intro/feature-overview) — Summary of key features.
-
----
-
-## For Developers
-
-This page keeps explanations straightforward and avoids complex implementation details. For understanding implementation, explore the files:
-
-- `googlemock/include/gmock/gmock-spec-builders.h`
-- `googlemock/src/gmock-spec-builders.cc`
-- Corresponding test files: `gmock-spec-builders_test.cc`
-
-
----
-
-*You are now equipped with the foundational terminology to navigate GoogleTest and gMock documentation and excel at writing C++ tests.*
-
----
