--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,163 +1,139 @@
 ---
-title: "Writing Your First Test"
-description: "Step through creating your first simple unit test using GoogleTest. This guide walks you through initial setup, fundamental assertions, and essential runner commands, helping you establish solid testing habits from the outset."
+title: "Writing and Running Your First Test"
+description: "A step-by-step tutorial on creating, compiling, and running your very first test case with GoogleTest. Learn to identify testable units, write basic assertions, and interpret test output."
 ---
 
-# Writing Your First Test
+# Writing and Running Your First Test with GoogleTest
 
-Step through creating your first simple unit test using GoogleTest. This guide walks you through initial setup, fundamental assertions, and essential runner commands, helping you establish solid testing habits from the outset.
+## Introduction
+
+This guide walks you through the process of creating, compiling, and running your very first test case with GoogleTest. You will learn how to identify testable units in your code, write basic assertions to verify behavior, and interpret test results effectively.
+
+Whether you’re new to automated testing or coming from another framework, this step-by-step tutorial will help you get started with GoogleTest quickly and confidently.
 
 ---
 
-## Workflow Overview
+## 1. Workflow Overview
 
-### What You Will Achieve
-By following this guide, you'll write your first unit test using GoogleTest. You'll learn how to:
-- Set up a basic test case and test suite
-- Write simple assertions to validate code behavior
-- Build and run your tests using the GoogleTest framework
-- Understand the test result outputs
+### Task Description
+Learn to write a simple test using GoogleTest, compile it into a test executable, run the tests, and interpret the output. This tutorial covers everything necessary to start validating your C++ code with automated unit tests.
 
 ### Prerequisites
-Make sure you have:
-- GoogleTest properly installed and configured in your project (see Installation Guide)
-- A basic C++ development environment set up (compiler, build system)
-- Source code to test (a simple function or class to verify)
+- A working C++ development environment (compiler supporting C++11 or higher).
+- GoogleTest downloaded and set up for compilation in your project (consult the Quickstart Installation guide if not).
+- Basic understanding of C++ syntax.
 
 ### Expected Outcome
-After completing this guide, you will have a working test executable that:
-- Includes at least one test suite with one or more test cases
-- Runs tests and reports success or failure clearly
-- Demonstrates fundamental GoogleTest macros and assertions
+- A compiled test program containing at least one test case.
+- The ability to run the test executable and see GoogleTest output results.
+- Confidence in writing assertions and verifying the behavior of your code.
 
-### Estimated Time
-About 10-15 minutes.
+### Time Estimate
+About 15–30 minutes depending on environment setup.
 
 ### Difficulty Level
-Beginner-friendly.
+Beginner
 
 ---
 
-## Step-by-Step Instructions
+## 2. Step-by-Step Instructions
 
-### Step 1: Include GoogleTest Headers
-Ensure your test source file includes the GoogleTest header to access the testing macros:
+<Steps>
+<Step title="Create a Test Source File">
+Create a new C++ source file, for example `my_first_test.cc`. This file will contain your test code.
+</Step>
+
+<Step title="Include GoogleTest Headers">
+At the top of your file, include GoogleTest headers to get access to the testing macros and assertions:
 
 ```cpp
 #include <gtest/gtest.h>
 ```
+</Step>
 
-### Step 2: Write a Simple Test Using TEST Macro
-The `TEST` macro defines a basic test function. It takes two arguments:
-- The test suite name (grouping tests)
-- The test name
-
-Here's an example that tests a simple `Factorial` function:
+<Step title="Write Your First Test Case">
+Use the `TEST` macro to define a test.
 
 ```cpp
-// Example factorial function to test
+// This defines a test suite 'FactorialTest' and a test 'HandlesZeroInput'.
+TEST(FactorialTest, HandlesZeroInput) {
+  EXPECT_EQ(Factorial(0), 1);  // Asserts Factorial(0) should be 1.
+}
+```
+
+Tips:
+- The first argument is the test suite name grouping related tests.
+- The second argument is the test name.
+- Use `EXPECT_*` macros to verify expected conditions without stopping the test.
+
+Refer to [Assertions Reference](reference/assertions.md) for available assertions.
+</Step>
+
+<Step title="Implement the Code Under Test">
+Make sure the function or method you intend to test, e.g., `Factorial`, is implemented and accessible from your test source.
+
+Example implementation:
+
+```cpp
 int Factorial(int n) {
   return (n <= 1) ? 1 : n * Factorial(n - 1);
 }
+```
+</Step>
 
-// Define a test in the suite 'FactorialTest' with the name 'HandlesZeroInput'
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
+<Step title="Compile the Test Program">
+Compile your test source with GoogleTest linked. If using CMake, follow the installation and build steps from the [Quickstart Installation Guide](guides/getting-started/quickstart-installation).
 
-// Another test case
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
-}
+Example compilation command:
+
+```bash
+g++ my_first_test.cc -lgtest -lgtest_main -pthread -o my_first_test
 ```
 
-- Use `EXPECT_EQ` to assert expected equality: `EXPECT_EQ(actual, expected)`.
-- The test body can contain standard C++ code.
+Check for compile errors and fix as needed.
+</Step>
 
-### Step 3: Build Your Test Executable
-Compile your test source file along with GoogleTest into an executable.
-- If using CMake, link with the `gtest` or `gtest_main` libraries.
+<Step title="Run the Test Executable">
+Run the executable generated:
 
-Example CMake snippet:
-
-```cmake
-add_executable(my_test test_file.cc)
-target_link_libraries(my_test gtest_main)
+```bash
+./my_first_test
 ```
 
-### Step 4: Run the Tests
-Run your built test binary. GoogleTest will:
-- Discover all defined tests
-- Run each test and report results
+Expected output will indicate tests run and whether they succeeded or failed.
+</Step>
 
-Sample console output:
+<Step title="Interpret Test Output">
+If the test passes, GoogleTest prints:
 
-```text
-[==========] Running 2 tests from 1 test suite.
+```
+[==========] Running 1 test from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
+[----------] 1 test from FactorialTest
 [ RUN      ] FactorialTest.HandlesZeroInput
 [       OK ] FactorialTest.HandlesZeroInput (0 ms)
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
-[----------] 2 tests from FactorialTest (0 ms total)
+[----------] 1 test from FactorialTest (0 ms total)
 
 [----------] Global test environment tear-down
-[==========] 2 tests from 1 test suite ran. (0 ms total)
-[  PASSED  ] 2 tests.
+[==========] 1 test from 1 test suite ran. (0 ms total)
+[  PASSED  ] 1 test.
 ```
 
-### Step 5: Interpret Results
-- `PASSED` means your assertions succeeded.
-- Failures print the location and expected vs actual values.
+If the test fails, GoogleTest will print the failed assertion, file, line, and a descriptive message.
+
+Use this feedback to debug your code or test.
+</Step>
+</Steps>
 
 ---
 
-## Best Practices
-
-- Name test suites and tests clearly reflecting their intent.
-- Use `EXPECT_*` assertions to allow multiple checks per test, `ASSERT_*` for fatal conditions.
-- Keep tests independent and isolate failures.
-- Write tests before or along with your code for better coverage.
-
----
-
-## Common Pitfalls
-
-- Forgetting to link with GoogleTest libraries.
-- Using `TEST()` instead of `TEST_F()` if you intend to use fixtures.
-- Omitting `testing::InitGoogleTest(&argc, argv);` and `RUN_ALL_TESTS()` in `main()` when you write one.
-- Not returning the value of `RUN_ALL_TESTS()` in your `main()`.
-
----
-
-## Troubleshooting
-
-### Test Fails To Compile
-- Check proper inclusion of `<gtest/gtest.h>`.
-- Verify library paths and link flags are set correctly.
-
-### Tests Run But No Tests Found
-- Confirm that `TEST()` macros are expanded and not hidden behind macros.
-- Ensure that the code containing tests is compiled and linked.
-
-### Tests Fail But You Expect Them To Pass
-- Review assertion failure details carefully.
-- Use verbose output with `--gtest_filter` to focus on single tests.
-
----
-
-## Example Full Test Program
+## 3. Code Example: Testing a Factorial Function
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Simple function under test
 int Factorial(int n) {
-  return (n == 0) ? 1 : n * Factorial(n - 1);
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
 }
 
 TEST(FactorialTest, HandlesZeroInput) {
@@ -172,33 +148,70 @@ TEST(FactorialTest, HandlesPositiveInput) {
 }
 
 int main(int argc, char **argv) {
-  testing::InitGoogleTest(&argc, argv);
+  ::testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-Save this in a file (e.g. `factorial_test.cc`), then build and run.
+Compile and run this to verify that your testing setup works.
 
 ---
 
-## Next Steps & Related Content
+## 4. Best Practices and Tips
 
-- Explore **Using Assertions Effectively** to write more comprehensive tests.
-- Learn about **Test Fixtures** (`TEST_F()`) for testing with shared objects.
-- Dive into **Writing and Running Tests** for more detailed examples.
-- Check out the [GoogleTest Primer](primer.md) for foundational concepts.
-- Once comfortable, explore Mocking with GoogleMock for testing interactions.
+- Use descriptive names for test suites and test cases to clarify the intent.
+- Group related tests in one test suite for maintainability.
+- Use `EXPECT_*` for non-fatal assertions to continue running tests.
+- Use `ASSERT_*` when failures should stop the current test immediately.
+- Write one logical assertion per test for clearer diagnostics.
+- Run tests frequently during development to catch regressions early.
+- Use the GoogleTest `--gtest_filter` flag to selectively run tests.
 
 ---
 
-<Tip>
-Start simple and build confidence. Writing your first test is a foundation for reliable, maintainable C++ software. GoogleTest's framework is designed to make this process smooth and approachable.
-</Tip>
+## 5. Troubleshooting Common Issues
 
-<Note>
-If you encounter issues with linking or running tests, refer to the Installation Guide and Prerequisites documentation.
-</Note>
+<AccordionGroup title="Common Pitfalls and Solutions">
+<Accordion title="Compilation Fails Due to Missing GoogleTest Headers or Libraries">
+Ensure GoogleTest is installed and your compiler's include and library paths are set correctly. Consult [Quickstart Installation Guide](guides/getting-started/quickstart-installation) for detailed setup.
+</Accordion>
+<Accordion title="Test Fails Unexpectedly with Assertion Errors">
+Check that your function under test and the test logic are correct. Use the verbose output of GoogleTest (`--gtest_verbose=info`) for more detailed diagnostics.
+</Accordion>
+<Accordion title="Tests Run But No Output or All Tests Skipped">
+Verify that you have defined at least one `TEST` or `TEST_F` macro and that your `main` function calls `RUN_ALL_TESTS()`.
+</Accordion>
+<Accordion title="Linker Errors Related to GoogleTest Symbols">
+Link against both `gtest` and `gtest_main` (or provide your own main). For example: `-lgtest -lgtest_main -pthread`.
+</Accordion>
+</AccordionGroup>
 
-<Warning>
-Always ensure you call `RUN_ALL_TESTS()` and return its result in your main() to correctly report test results.
-</Warning>
+---
+
+## 6. Next Steps & Related Content
+
+- Once comfortable with basic tests, explore test fixtures with `TEST_F` for reusing setup code.
+- Learn to use assertions in depth from [Assertions Reference](reference/assertions.md).
+- Write and run more complex tests with [Writing and Structuring Tests Guide](guides/writing-and-structuring-tests/assertions-and-matchers).
+- Incorporate mocks by reading [Mocking for Dummies](gmock_for_dummies.md) and [GoogleMock Cookbook](gmock_cook_book.md).
+- Integrate testing into your build systems; see [Integration with Build Systems & Other Tools](overview/integration-feature-overview/integration-build-systems).
+
+---
+
+## References
+
+- [GoogleTest Primer](docs/primer.md)
+- [Quickstart Installation Guide](guides/getting-started/quickstart-installation)
+- [Assertions Reference](reference/assertions.md)
+- [Mocking for Dummies](gmock_for_dummies.md)
+- [Mocking Cookbook](gmock_cook_book.md)
+- [Writing and Structuring Tests](guides/writing-and-structuring-tests/assertions-and-matchers)
+- [Test Discovery & Execution Lifecycle](concepts/architecture-core-models/test-lifecycle)
+
+Use the official [GoogleTest GitHub repository](https://github.com/google/googletest) for source and issues.
+
+---
+
+<Check>
+By following this guide, you will successfully create and run your first tests with GoogleTest, establishing a foundational skill for robust C++ development.
+</Check>
