--- a/guides/getting-started/basic-mocking.mdx
+++ b/guides/getting-started/basic-mocking.mdx
@@ -1,35 +1,70 @@
 ---
-title: "Basic Mocking with GoogleMock"
-description: "Step-by-step guidance for creating and using mock objects with GoogleMock. Learn to declare mock classes, set expectations, and verify calls against real interfaces, accelerating the adoption of effective test doubles."
+title: "Mocking Basics: Simulating Dependencies"
+description: "Get started with the core concepts of GoogleMock. Learn how to create simple mock objects, set up method expectations, and replace real dependencies to test your code in isolation."
 ---
 
-# Basic Mocking with GoogleMock
+# Mocking Basics: Simulating Dependencies
 
-## Workflow Overview
-
-- **Task Description:** This guide helps you create mock classes using GoogleMock, set expectations on mock method calls, and verify interactions in your C++ tests.
-- **Prerequisites:**
-  - Familiarity with C++ and virtual functions
-  - GoogleTest and GoogleMock installed and configured in your project
-  - Basic understanding of unit testing principles
-- **Expected Outcome:**
-  - You will learn to write mock classes with `MOCK_METHOD` macros
-  - Set default behaviors using `ON_CALL`
-  - Set and verify expectations using `EXPECT_CALL`
-  - Manage mock object lifetimes and verify expectations explicitly if needed
-- **Time Estimate:** Approximately 15-30 minutes to follow the examples and apply basic mocking
-- **Difficulty Level:** Beginner to Intermediate
+## Overview
+This guide introduces you to the fundamental concepts of mocking using GoogleMock (gMock). It helps you learn how to create simple mock objects, specify method expectations, and replace real dependencies in your code to enable isolated and reliable unit testing.
 
 ---
 
-## Step-by-Step Instructions
+## What You Will Achieve
+By following this guide, you will be able to:
 
-### 1. Define a Mock Class
+- Define mock classes for your interfaces or abstract base classes.
+- Create mock objects for use in your tests.
+- Set expectations on mock methods specifying how they should be called.
+- Control the behavior of mock methods by defining return values or side effects.
+- Verify interactions with dependencies without relying on their real implementations.
 
-To test code depending on an interface, create a derived mock class inheriting from that interface. Use `MOCK_METHOD` macros to mock virtual methods.
+---
+
+## Prerequisites
+Before you start, ensure you have:
+
+- A C++ environment configured to use GoogleTest and GoogleMock.
+- Basic familiarity with C++ classes, virtual methods, and unit testing.
+- Installed GoogleTest with gMock support included (typically via `#include <gmock/gmock.h>`).
+
+
+## Why Use Mocks?
+In many cases, your code depends on external classes or systems that are either:
+
+- Difficult or slow to set up for tests (e.g., databases, file systems).
+- Non-deterministic or uncontrollable (e.g., network access).
+- Complex or unavailable in the test environment.
+
+Mocks let you simulate these dependencies by creating stand-in objects whose behavior you fully control during the test. This isolation leads to faster, more reliable, and easy-to-understand tests.
+
+---
+
+## Step 1: Define a Mock Class
+
+Create a mock class that inherits the interface you want to mock. For each virtual method, use the `MOCK_METHOD` macro inside the public section of the mock to declare the mocked version.
+
+### Example
+Suppose you have an interface `Turtle`:
 
 ```cpp
-#include <gmock/gmock.h>  // Include GoogleMock header
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual void Turn(int degrees) = 0;
+  virtual void GoTo(int x, int y) = 0;
+  virtual int GetX() const = 0;
+  virtual int GetY() const = 0;
+};
+```
+
+Define a mock `MockTurtle` like this:
+
+```cpp
+#include <gmock/gmock.h>
 
 class MockTurtle : public Turtle {
  public:
@@ -43,197 +78,163 @@ class MockTurtle : public Turtle {
 };
 ```
 
-> **Note:**
-> - The mock methods must always be declared in `public:` section, regardless of the base method's access.
-> - If the method is `const`, include `(const)` qualifier in the fourth parameter.
-> - Use the `override` specifier to catch signature mismatches.
-> 
-> - For functions with argument types or return types containing commas (e.g., `std::pair` or `std::map`), wrap those types in additional parentheses or use type aliases to avoid macro parsing errors.
+**Important:**
 
+- If the original method is `const`, specify `(const, override)`. 
+- Always put mock methods in the **public** section of the mock class.
 
-### 2. Set Default Behaviors with `ON_CALL`
+---
 
-Use the `ON_CALL` macro to define default behaviors for mock methods. This does not imply any expectation of how often or if the method will be called.
+## Step 2: Create Mock Objects in Your Tests
+
+With the mock class defined, you can instantiate it and use it as a substitute for the real dependency.
 
 ```cpp
-using ::testing::Return;
-...
 MockTurtle turtle;
-
-ON_CALL(turtle, GetX())
-    .WillByDefault(Return(0));  // Default return value when GetX() is called
 ```
 
-> **Tip:** Use `ON_CALL` for common default behaviors, usually inside test fixtures' setup.
+---
 
-### 3. Set Expectations with `EXPECT_CALL`
+## Step 3: Set Expectations on Mock Methods
 
-Use `EXPECT_CALL` to specify how many times and with what arguments a mock method should be called, and what it should do.
+Use the `EXPECT_CALL` macro to specify which methods you expect to be called, how many times, with what arguments, and what they return or do.
+
+### Basic Syntax
+
+```cpp
+EXPECT_CALL(mock_object, MethodName(matchers))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action);
+```
+
+- The `mock_object` is your mock instance.
+- `MethodName` is the mocked method.
+- `matchers` specify expected arguments (or omit to accept any).
+- `Times` specifies allowed call count (default is once).
+- `WillOnce` and `WillRepeatedly` specify the method's behavior.
+
+### Example
+Expect the `PenDown()` call at least once:
 
 ```cpp
 using ::testing::AtLeast;
-using ::testing::_;  // wildcard matcher for any argument
+EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
+```
+
+Expect `GetX()` to return different values over calls:
+
+```cpp
 using ::testing::Return;
-
-EXPECT_CALL(turtle, Forward(100))
-    .Times(AtLeast(1));
-
 EXPECT_CALL(turtle, GetX())
-    .WillOnce(Return(42))
-    .WillRepeatedly(Return(50));
+    .WillOnce(Return(100))
+    .WillOnce(Return(150))
+    .WillRepeatedly(Return(200));
 ```
 
-> **Details:**
-> - `EXPECT_CALL` takes the mock object and method call with argument matchers.
-> - You can use matchers like `_` to match any argument, or more specific ones like `Ge()`, `Eq()`, etc.
-> - `.Times()` specifies expected call count (exact, at least, any number, etc.).
-> - `.WillOnce()` and `.WillRepeatedly()` define what the method returns or does when called.
+---
 
-### 4. Use Sequences and Ordering (Optional)
+## Step 4: Use Your Mocks in the Code Under Test
 
-To ensure calls occur in a specific order, use `InSequence` or `Sequence` objects.
+Inject or pass the mock object to the code being tested. When tested code calls mock methods, gMock verifies that calls match expectations.
 
+### Example
 ```cpp
-{
-  InSequence s;
-  EXPECT_CALL(turtle, PenDown());
-  EXPECT_CALL(turtle, Forward(100));
-  EXPECT_CALL(turtle, PenUp());
-}
-```
-
-### 5. Test Your Code Using Mocks
-
-Inject mocks into your code under test and verify behavior.
-
-```cpp
-TEST(PainterTest, DrawsCircle) {
+TEST(PainterTest, CanDrawShape) {
   MockTurtle turtle;
 
   EXPECT_CALL(turtle, PenDown());
-  EXPECT_CALL(turtle, Forward(100));
-  EXPECT_CALL(turtle, PenUp());
+  EXPECT_CALL(turtle, Forward(10));
 
   Painter painter(&turtle);
-  EXPECT_TRUE(painter.DrawCircle(0, 0, 50));
+  painter.DrawLine(10);
 }
 ```
 
-### 6. Verify and Clear Expectations Explicitly (If Needed)
-
-If you want to verify expectations before mock destruction or control mock lifetime manually, call:
-
-```cpp
-bool success = testing::Mock::VerifyAndClearExpectations(&mock_object);
-```
-
-Or to verify and clear default actions as well:
-
-```cpp
-bool success = testing::Mock::VerifyAndClear(&mock_object);
-```
-
-> **Warning:** Do not set new expectations after verifying and clearing.
+If `DrawLine(10)` does not call `PenDown()` or `Forward(10)`, the test will fail immediately.
 
 ---
 
-## Examples & Code Samples
+## Step 5: Verify the Results
 
-### Mocking a Class with `MOCK_METHOD`
+GoogleMock automatically verifies expectations when mock objects are destructed. If calls are missing, extra, or out of order (depending on expectations), the test fails with detailed error messages.
 
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const));
-  MOCK_METHOD(void, Reset, (int level));
-};
-```
+---
 
-### Using `EXPECT_CALL` with Matchers and Actions
+## Additional Tips and Best Practices
 
-```cpp
-using ::testing::Return;
-using ::testing::_;
+- **Set expectations before exercising the code under test.** gMock requires expectations to be declared *before* the method is called.
+- **Use matchers wisely.** Use wildcard matcher `_` to ignore argument values when they are irrelevant.
+- **Use sequences to control call order.** `InSequence` objects enforce call order when needed.
+- **Suppress warnings on uninteresting calls** by wrapping mocks in `NiceMock<>` if you don't care about some methods.
+- **Avoid over-specifying expectations.** Set expectations to test behavior contracts, not internal implementation details.
 
-MockFoo mock;
+---
 
-EXPECT_CALL(mock, GetSize())
-    .WillOnce(Return(10));
+## Common Pitfalls
 
-EXPECT_CALL(mock, Reset(_))
-    .Times(AtLeast(1));
+- **Not setting expectations before calls:** Test behavior is undefined; always set expectations first.
+- **Mismatching arguments:** Ensure matchers or values in `EXPECT_CALL` match the calls.
+- **Overly strict expectations:** Using `Times(Exactly(n))` and specifying many precise expectations can lead to brittle tests.
+- **Missing virtual destructors:** Mock classes and interfaces must have virtual destructors to prevent undefined behavior.
+- **Misplacing `MOCK_METHOD` in private/protected sections:** Always put `MOCK_METHOD` in the public section.
 
-// Exercise
-int size = mock.GetSize();
-mock.Reset(5);
-```
+---
 
-### Handling Methods With Multiple Calls and Return Values
+## Troubleshooting
 
-```cpp
-EXPECT_CALL(mock, GetValue())
-    .WillOnce(Return(1))
-    .WillOnce(Return(2))
-    .WillRepeatedly(Return(3));
-```
+| Symptom | Cause | Solution |
+|---|---|---|
+| Test fails with "Actual function call count doesn't match" | Method called fewer or more times than expected | Adjust `Times()` or verify code calls as expected |
+| Warnings about "Uninteresting mock function call" | Mock method called without an `EXPECT_CALL` | Use `ON_CALL()` to define default behavior or use `NiceMock` |
+| Compilation errors mocking methods with commas in types | Macro parsing issues with unprotected commas | Wrap the types with extra parentheses or use type aliases |
+| Infinite recursion in mock methods delegating to base | Calling overridden method inside lambda without scope resolution | Use scope resolution explicitly to call base method, e.g., `foo.Base::Method()` |
 
-### Using `ON_CALL` for Default Behavior
+---
 
-```cpp
-ON_CALL(mock, GetValue())
-    .WillByDefault(Return(0));
+## Visualizing the Mocking Flow
+
+```mermaid
+sequenceDiagram
+  participant Test
+  participant MockObject
+  participant TestedCode
+
+  Test->>MockObject: Create mock instance
+  Test->>MockObject: Set EXPECT_CALL and ON_CALL expectations
+  Test->>TestedCode: Inject MockObject
+  TestedCode->>MockObject: Call mocked methods
+  MockObject-->>TestedCode: Return values / side effects
+  MockObject->>Test: Verify expectations on destruction
 ```
 
 ---
 
-## Troubleshooting & Tips
+## Next Steps
 
-### Common Issues
+- Explore **[gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)** to deepen your practical understanding.
+- Learn about advanced mocking techniques in **[gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)**.
+- Understand **expectations ordering and sequences** in the **Expectations and Sequences** reference.
+- Consult the **Mocking Reference** to explore detailed syntax and macros.
 
-- **Unprotected commas in types**: Wrap types containing commas with parentheses or use type aliases.
-- **Expectations not met**: Run tests with `--gmock_verbose=info` to trace mock invocations.
-- **Mock destructor warnings**: Ensure your base classes have virtual destructors.
-- **Unexpected or uninteresting calls warnings**:
-  - Use `NiceMock` to suppress warnings on uninteresting calls.
-  - Use explicit `EXPECT_CALL(...).Times(AnyNumber())` if calls are allowed but do not need verification.
-- **Over-specified expectations** causing test brittleness: Use `ON_CALL` for default behaviors and expect only necessary calls via `EXPECT_CALL`.
-
-### Best Practices
-
-- Always put `MOCK_METHOD` in the `public` section.
-- Use `ON_CALL` to define default behavior, not to specify call expectations.
-- Use `EXPECT_CALL` exclusively when you want to verify calls.
-- Utilize `InSequence` or `.InSequence()` for ordered call expectations.
-- Use `RetiresOnSaturation()` to make expectations non-sticky when appropriate.
-- Prefer lambdas or callable objects for complex actions.
-
-### Performance Considerations
-
-- Mock classes with many methods can increase compilation time. Move mock class constructors and destructors to implementation files to reduce compile times.
-
-### Alternative Approaches
-
-- For non-virtual methods, mock by defining unrelated mock classes with matching signatures.
-- For complex fakes that are partially used in mocking, delegate actions using `ON_CALL` to the fake implementation.
 
 ---
 
-## Next Steps & Related Content
-
-- Learn [Using Assertions Effectively](/guides/essential-workflows/using-assertions) to assert test results.
-- Explore [Advanced Mocking Patterns](/guides/essential-workflows/advanced-mocking-patterns) for complex scenarios.
-- Understand [Matchers Reference](reference/matchers.md) and [Actions Reference](reference/actions.md) to write expressive tests.
-- Read [Understanding Uninteresting vs Unexpected Calls](docs/gmock_cook_book.md#uninteresting-vs-unexpected) for mock call classification.
-- Visit [Mocking Reference](docs/reference/mocking.md) for detailed syntax and API specification.
-- For quick syntax, refer to the [gMock Cheat Sheet](docs/gmock_cheat_sheet.md).
+## References
+- [Mocking Reference](reference/mocking.md)
+- [gMock for Dummies](guides/getting-started/gmock_for_dummies.md)
+- [gMock Cookbook](guides/writing-and-structuring-tests/gmock_cook_book.md)
+- [gMock Cheat Sheet](reference/mocking-actions-matchers/gmock_cheat_sheet.md)
 
 ---
 
-## Additional Resources
+## Summary
+GoogleMock simplifies writing mocks in C++ tests, enabling you to simulate dependencies easily and verify interactions with precise expectations. This page focused on setting up mock classes, creating mock objects, setting expectations using `EXPECT_CALL`, and harnessing mock verification to ensure robust testing.
 
-- [gMock for Dummies](docs/gmock_for_dummies.md) — foundational introduction
-- [gMock Cookbook](docs/gmock_cook_book.md) — recipes and patterns
-- [MockFunction](docs/gmock_cook_book.md#MockFunction) for mocking std::function
-- [FAQ on Mocking](docs/gmock_faq.md) for common issues and questions
+<Tip>
+Always define mock methods in the **public** section of your mock class to ensure gMock can access them.
+</Tip>
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/gmock_for_dummies.md", "range": "1-173"},{"path": "docs/gmock_cook_book.md", "range": "1-744"},{"path": "docs/reference/mocking.md", "range": "1-237"}]} />
+<Note>
+Use `ON_CALL` to define default behavior without forcing a call expectation, and use `EXPECT_CALL` only when you want to verify method invocations.
+</Note>
